alterado listagem de habilidades

--- a/web/views/habilidade/listar.phtml
+++ b/web/views/habilidade/listar.phtml
@@ -14,7 +14,9 @@
             <td><?= $valorHabilidade->getHabilidade() ?></td>
             <td class="minimal">
                 <a class="btn btn-primary btn-sm" href="/habilidade/editar?id=<?= $valorHabilidade->getId() ?>" title="Editar"><i class="fas fa-edit"></i></a>
-                <a class="btn btn-danger btn-sm" href="/habilidade/excluir?id=<?= $valorHabilidade->getId() ?>" title="Excluir"><i class="fas fa-trash"></i></a>
+                <?php if($_SESSION['usuario']->getTipo() == TipoUsuarioEnum::ADMINISTRADOR->value) : ?>
+                    <a class="btn btn-danger btn-sm" href="/habilidade/excluir?id=<?= $valorHabilidade->getId() ?>" title="Excluir"><i class="fas fa-trash"></i></a>
+                <?php endif ?>
             </td>
         </tr>
     <?php endforeach; ?>
