--- a/web/layouts/sistema-candidato/cabecalho.phtml
+++ b/web/layouts/sistema-candidato/cabecalho.phtml
@@ -14,6 +14,11 @@
             width: 100%;
             box-sizing: border-box;
         }
+        .form-select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 
