--- a/web/views/candidato/perfil.phtml
+++ b/web/views/candidato/perfil.phtml
@@ -6,10 +6,10 @@
             <div class="col-md-4 form-floating">
                 <select class="form-control form-select" name="regimeContratacao" id="regimeContratacao" required>
                     <option value="">Selecione</option>
-                    <option value="1" <?= !empty($candidatoEditar) && $candidatoEditar->getRegimeContratacao() == '1' ? 'selected' : '' ?>>CLT</option>
-                    <option value="2" <?= !empty($candidatoEditar) && $candidatoEditar->getRegimeContratacao() == '2' ? 'selected' : '' ?>>PJ</option>
-                    <option value="3" <?= !empty($candidatoEditar) && $candidatoEditar->getRegimeContratacao() == '3' ? 'selected' : '' ?>>Estágio</option>
-                    <option value="4" <?= !empty($candidatoEditar) && $candidatoEditar->getRegimeContratacao() == '4' ? 'selected' : '' ?>>Jovem Aprendiz</option>
+                    <option value="1" <?= !empty($candidatoId) && $candidatoId->getRegimeContratacao() == '1' ? 'selected' : '' ?>>CLT</option>
+                    <option value="2" <?= !empty($candidatoId) && $candidatoId->getRegimeContratacao() == '2' ? 'selected' : '' ?>>PJ</option>
+                    <option value="3" <?= !empty($candidatoId) && $candidatoId->getRegimeContratacao() == '3' ? 'selected' : '' ?>>Estágio</option>
+                    <option value="4" <?= !empty($candidatoId) && $candidatoId->getRegimeContratacao() == '4' ? 'selected' : '' ?>>Jovem Aprendiz</option>
                 </select>
                 <label for="regimeContratacao" class="col-form-label">Regime de Contratação</label>
             </div>
@@ -17,9 +17,9 @@
             <div class="col-md-4 form-floating">
                 <select class="form-control form-select" name="regimeTrabalho" id="regimeTrabalho" required>
                     <option value="">Selecione</option>
-                    <option value="1" <?= !empty($candidatoEditar) && $candidatoEditar->getRegimeTrabalho() == '1' ? 'selected' : '' ?>>Presencial</option>
-                    <option value="2" <?= !empty($candidatoEditar) && $candidatoEditar->getRegimeTrabalho() == '2' ? 'selected' : '' ?>>Híbrido</option>
-                    <option value="3" <?= !empty($candidatoEditar) && $candidatoEditar->getRegimeTrabalho() == '3' ? 'selected' : '' ?>>Remoto</option>
+                    <option value="1" <?= !empty($candidatoId) && $candidatoId->getRegimeTrabalho() == '1' ? 'selected' : '' ?>>Presencial</option>
+                    <option value="2" <?= !empty($candidatoId) && $candidatoId->getRegimeTrabalho() == '2' ? 'selected' : '' ?>>Híbrido</option>
+                    <option value="3" <?= !empty($candidatoId) && $candidatoId->getRegimeTrabalho() == '3' ? 'selected' : '' ?>>Remoto</option>
                 </select>
                 <label for="regimeTrabalho" class="col-form-label">Regime de Trabalho</label>
             </div>
@@ -28,9 +28,9 @@
             <div class="col-md-6 form-floating">
                 <select class="form-control form-select" name="nivelSenioridade" id="nivelSenioridade" required>
                     <option value="">Selecione</option>
-                    <option value="1" <?= !empty($candidatoEditar) && $candidatoEditar->getNivelSenioridade() == '1' ? 'selected' : '' ?>>Júnior</option>
-                    <option value="2" <?= !empty($candidatoEditar) && $candidatoEditar->getNivelSenioridade() == '2' ? 'selected' : '' ?>>Pleno</option>
-                    <option value="3" <?= !empty($candidatoEditar) && $candidatoEditar->getNivelSenioridade() == '3' ? 'selected' : '' ?>>Sênior</option>
+                    <option value="1" <?= !empty($candidatoId) && $candidatoId->getNivelSenioridade() == '1' ? 'selected' : '' ?>>Júnior</option>
+                    <option value="2" <?= !empty($candidatoId) && $candidatoId->getNivelSenioridade() == '2' ? 'selected' : '' ?>>Pleno</option>
+                    <option value="3" <?= !empty($candidatoId) && $candidatoId->getNivelSenioridade() == '3' ? 'selected' : '' ?>>Sênior</option>
                 </select>
                 <label for="nivelSenioridade" class="col-form-label">Nível de Senioridade</label>
             </div>
@@ -39,11 +39,11 @@
             <div class="col-md-6 form-floating">
                 <select class="form-control form-select" name="nivelHierarquia" id="nivelHierarquia" required>
                     <option value="">Selecione</option>
-                    <option value="1" <?= !empty($candidatoEditar) && $candidatoEditar->getNivelHierarquia() == '1' ? 'selected' : '' ?>>Auxiliar/Assistente/Analista</option>
-                    <option value="2" <?= !empty($candidatoEditar) && $candidatoEditar->getNivelHierarquia() == '2' ? 'selected' : '' ?>>Coordenação/Supervisão</option>
-                    <option value="3" <?= !empty($candidatoEditar) && $candidatoEditar->getNivelHierarquia() == '3' ? 'selected' : '' ?>>Gerência</option>
-                    <option value="4" <?= !empty($candidatoEditar) && $candidatoEditar->getNivelHierarquia() == '4' ? 'selected' : '' ?>>Diretoria</option>
-                    <option value="5" <?= !empty($candidatoEditar) && $candidatoEditar->getNivelHierarquia() == '5' ? 'selected' : '' ?>>C-Level</option>
+                    <option value="1" <?= !empty($candidatoId) && $candidatoId->getNivelHierarquia() == '1' ? 'selected' : '' ?>>Auxiliar/Assistente/Analista</option>
+                    <option value="2" <?= !empty($candidatoId) && $candidatoId->getNivelHierarquia() == '2' ? 'selected' : '' ?>>Coordenação/Supervisão</option>
+                    <option value="3" <?= !empty($candidatoId) && $candidatoId->getNivelHierarquia() == '3' ? 'selected' : '' ?>>Gerência</option>
+                    <option value="4" <?= !empty($candidatoId) && $candidatoId->getNivelHierarquia() == '4' ? 'selected' : '' ?>>Diretoria</option>
+                    <option value="5" <?= !empty($candidatoId) && $candidatoId->getNivelHierarquia() == '5' ? 'selected' : '' ?>>C-Level</option>
                 </select>
                 <label for="nivelHierarquia" class="col-form-label">Nível hierárquico</label>
             </div>
