alterações de listagem de filtros

--- a/web/views/vaga/painel.phtml
+++ b/web/views/vaga/painel.phtml
@@ -1,4 +1,57 @@
-<form method="post" action="/vaga/filtrar">
+<div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+      <span class="fs-4">Sidebar</span>
+    </a>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li class="nav-item">
+        <a href="#" class="nav-link active" aria-current="page">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
+          Home
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link text-white">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+          Dashboard
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link text-white">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+          Orders
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link text-white">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
+          Products
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link text-white">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+          Customers
+        </a>
+      </li>
+    </ul>
+    <hr>
+    <div class="dropdown">
+      <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+        <strong>mdo</strong>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+        <li><a class="dropdown-item" href="#">New project...</a></li>
+        <li><a class="dropdown-item" href="#">Settings</a></li>
+        <li><a class="dropdown-item" href="#">Profile</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="#">Sign out</a></li>
+      </ul>
+    </div>
+  </div>
+<form method="post" action="/vaga/index">
 
     <?php /** @var array<Habilidade> $habilidades */
     foreach ($habilidades as $habilidade) : ?>
@@ -52,16 +105,79 @@
 
             foreach ($estados as $sigla => $nome) : ?>
                 <div class="col-3 mb-3">
-                    <input type="checkbox" class="form-check-input" name="filtro_estados[]" id="estado_<?= $sigla ?>" value="<?= $sigla ?>" <?= isset($filial) && $filial->getEstado() == $sigla ? 'checked' : '' ?>>
-                    <label class="form-check-label ms-1" for="estado_<?= $sigla ?>"><?= $nome ?></label>
+                    <input type="checkbox" class="form-check-input" name="filtro_estados[]" id="estados_<?= $sigla ?>" value="<?= $sigla ?>" <?= isset($filial) && $filial->getEstado() == $sigla ? 'checked' : '' ?>>
+                    <label class="form-check-label ms-1" for="estados_<?= $sigla ?>"><?= $nome ?></label>
                 </div>
             <?php endforeach; ?>
         </div>
     </div>
 
+    <div class="col-md-12">
+        <label class="form-label">Nível hierárquico</label>
+        <div class="row">
+            <?php
+            $niveisHierarquia = [
+                '1' => 'Auxiliar/Assistente/Analista',
+                '2' => 'Coordenação/Supervisão',
+                '3' => 'Gerência',
+                '4' => 'Diretoria',
+                '5' => 'C-Level'
+            ];
 
+            foreach ($niveisHierarquia as $hierarquia => $descricao) : ?>
+                <div class="col-12 mb-3">
+                    <input type="checkbox" class="form-check-input" name="filtro_hierarquia[]" id="hierarquia_<?= $hierarquia ?>" value="<?= $hierarquia ?>">
+                    <label class="form-check-label ms-1" for="hierarquia_<?= $hierarquia ?>"><?= $descricao ?></label>
+                </div>
+            <?php endforeach; ?>
+        </div>
+    </div>
+
+    <div class="col-md-12">
+        <label class="form-label">Nível de senioridade</label>
+        <div class="row">
+            <?php
+            $niveisSenioridade = [
+                '1' => 'Júnior',
+                '2' => 'Pleno',
+                '3' => 'Sênior',
+            ];
+
+            foreach ($niveisSenioridade as $senioridade => $descricao) : ?>
+                <div class="col-12 mb-3">
+                    <input type="checkbox" class="form-check-input" name="filtro_senioridade[]" id="senioridade_<?= $senioridade ?>" value="<?= $senioridade ?>">
+                    <label class="form-check-label ms-1" for="senioridade_<?= $senioridade ?>"><?= $descricao ?></label>
+                </div>
+            <?php endforeach; ?>
+        </div>
+    </div>
+
+    <div class="col-md-12">
+        <label class="form-label">Regime de Contratação</label>
+        <div class="row">
+            <?php
+            $regimeContratacao = [
+                '1' => 'CLT',
+                '2' => 'PJ',
+                '3' => 'Estágio',
+                '4' => 'Jovem Aprendiz',
+            ];
+
+            foreach ($regimeContratacao as $contratacao => $descricao) : ?>
+                <div class="col-12 mb-3">
+                    <input type="checkbox" class="form-check-input" name="filtro_contratacao[]" id="contratacao_<?= $contratacao ?>" value="<?= $contratacao ?>">
+                    <label class="form-check-label ms-1" for="contratacao_<?= $contratacao ?>"><?= $descricao ?></label>
+                </div>
+            <?php endforeach; ?>
+        </div>
+    </div>
+
+    <button class="btn btn-primary" type="submit">
+        <i class="fas fa-save"></i> Salvar
+    </button>
 
 </form>
+
 <?php
 $maxColunas = 4;
 $coluna = 0;
