Ajustes para filtro em sidebar

--- a/web/assets/css/painel.css
+++ b/web/assets/css/painel.css
@@ -8,7 +8,7 @@
 .navbar {
     background-color: #093B6E !important;
     border-bottom: 1px solid white;
-    margin-bottom: 25px;
+    /*margin-bottom: 25px;*/
     font-size: 15px;
 }
 
