--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -22,7 +22,6 @@
                 <input type="text" class="form-control" name="email" id="email" value="<?= isset($vaga) ? $vaga->getEmail() : '' ?>">
                 <label for="email" class="col-form-label">Email</label>
             </div>
-
             <div class="col-md-4">
                 <div class="input-group">
                     <span class="input-group-text">R$</span>
@@ -32,7 +31,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-md-4 form-floating">
                 <input type="number" class="form-control" name="cargaHoraria" id="cargaHoraria" value="<?= isset($vaga) ? $vaga->getCargaHoraria() : '' ?>" min="0">
                 <label for="cargaHoraria" class="col-form-label">Carga horária</label>
@@ -55,10 +53,9 @@
             <div class="col-md-4 form-floating">
                 <select class="form-control form-select" name="regimeContratacao" id="regimeContratacao" required>
                     <option value="">Selecione</option>
-                    <option value="1" <?= !empty($vaga) && $vaga->getRegimeContratacao() == '1' ? 'selected' : '' ?>>CLT</option>
-                    <option value="2" <?= !empty($vaga) && $vaga->getRegimeContratacao() == '2' ? 'selected' : '' ?>>PJ</option>
-                    <option value="3" <?= !empty($vaga) && $vaga->getRegimeContratacao() == '3' ? 'selected' : '' ?>>Estágio</option>
-                    <option value="4" <?= !empty($vaga) && $vaga->getRegimeContratacao() == '4' ? 'selected' : '' ?>>Jovem Aprendiz</option>
+                    <?php foreach (RegimeContratacaoEnum::forSelect() as $indice => $valor): ?>
+                        <option value="<?= $indice ?>" <?= !empty($vaga) && $vaga->getRegimeContratacao() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
+                    <?php endforeach; ?>
                 </select>
                 <label for="regimeContratacao" class="col-form-label">Regime de Contratação</label>
             </div>
@@ -66,9 +63,9 @@
             <div class="col-md-4 form-floating">
                 <select class="form-control form-select" name="regimeTrabalho" id="regimeTrabalho" required>
                     <option value="">Selecione</option>
-                    <option value="1" <?= !empty($vaga) && $vaga->getRegimeTrabalho() == '1' ? 'selected' : '' ?>>Presencial</option>
-                    <option value="2" <?= !empty($vaga) && $vaga->getRegimeTrabalho() == '2' ? 'selected' : '' ?>>Híbrido</option>
-                    <option value="3" <?= !empty($vaga) && $vaga->getRegimeTrabalho() == '3' ? 'selected' : '' ?>>Remoto</option>
+                    <?php foreach (RegimeTrabalhoEnum::forSelect() as $indice => $valor): ?>
+                        <option value="<?= $indice ?>" <?= !empty($vaga) && $vaga->getRegimeTrabalho() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
+                    <?php endforeach; ?>
                 </select>
                 <label for="regimeTrabalho" class="col-form-label">Regime de Trabalho</label>
             </div>
@@ -89,9 +86,9 @@
             <div class="col-md-6 form-floating">
                 <select class="form-control form-select" name="nivelSenioridade" id="nivelSenioridade" required>
                     <option value="">Selecione</option>
-                    <option value="1" <?= !empty($vaga) && $vaga->getNivelSenioridade() == '1' ? 'selected' : '' ?>>Júnior</option>
-                    <option value="2" <?= !empty($vaga) && $vaga->getNivelSenioridade() == '2' ? 'selected' : '' ?>>Pleno</option>
-                    <option value="3" <?= !empty($vaga) && $vaga->getNivelSenioridade() == '3' ? 'selected' : '' ?>>Sênior</option>
+                    <?php foreach (NivelSenioridadeEnum::forSelect() as $indice => $valor): ?>
+                        <option value="<?= $indice ?>" <?= !empty($vaga) && $vaga->getNivelSenioridade() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
+                    <?php endforeach; ?>
                 </select>
                 <label for="nivelSenioridade" class="col-form-label">Nível de Senioridade</label>
             </div>
@@ -100,11 +97,9 @@
             <div class="col-md-6 form-floating">
                 <select class="form-control form-select" name="nivelHierarquia" id="nivelHierarquia" required>
                     <option value="">Selecione</option>
-                    <option value="1" <?= !empty($vaga) && $vaga->getNivelHierarquico() == '1' ? 'selected' : '' ?>>Auxiliar/Assistente/Analista</option>
-                    <option value="2" <?= !empty($vaga) && $vaga->getNivelHierarquico() == '2' ? 'selected' : '' ?>>Coordenação/Supervisão</option>
-                    <option value="3" <?= !empty($vaga) && $vaga->getNivelHierarquico() == '3' ? 'selected' : '' ?>>Gerência</option>
-                    <option value="4" <?= !empty($vaga) && $vaga->getNivelHierarquico() == '4' ? 'selected' : '' ?>>Diretoria</option>
-                    <option value="5" <?= !empty($vaga) && $vaga->getNivelHierarquico() == '5' ? 'selected' : '' ?>>C-Level</option>
+                    <?php foreach (NivelHierarquicoEnum::forSelect() as $indice => $valor): ?>
+                        <option value="<?= $indice ?>" <?= !empty($vaga) && $vaga->getNivelHierarquico() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
+                    <?php endforeach; ?>
                 </select>
                 <label for="nivelHierarquia" class="col-form-label">Nível hierárquico</label>
             </div>
